--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
+body {
+  margin: 0;
+  padding: 0;
+}
+.user-list {
+  width: 400px;
+  float: left;
   text-align: center;
+  height: 100vh;
+  margin-right: 50px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user-info {
+  width: calc(100% - 450px);
+  float: left;
+  text-align: center;
+  height: 100vh;
 }
